Fix: Move watermark up and align Back to Top with copyright text

--- a/koda-design-system-final.css
+++ b/koda-design-system-final.css
@@ -376,13 +376,13 @@ select:focus {
 }
 
 .back-to-top {
-  margin-top: 0px !important;
+  margin-top: -40px !important;
   margin-bottom: 0px !important;
 }
 
 .footer-watermark {
   position: absolute;
-  bottom: 5px;
+  bottom: 120px;
   right: 80px;
   opacity: 0.3;
   pointer-events: none;
